app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-agent-routing
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Firefox.*"  # Roteamento para Firefox
    route:
    - destination:
        host: app
        subset: v2
  - route:
    - destination:
        host: app
        subset: v1  # Roteamento padrão se o cabeçalho não corresponder a nenhum dos padrões acima
