example-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example
spec:
  hosts:
  - "*"
  gateways:
  - example-gateway
  http:
  - route:
    - destination:
        host: example
        subset: v1
        port:
          number: 9080
    match:
    - headers:
        user-agent:
          regex: ".*Firefox.*"  # Roteamento para Firefox
  - route:
    - destination:
        host: example
        subset: v2
        port:
          number: 9080
    match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"  # Roteamento para Chrome
